@@ -1,3 +1,4 @@
+Build a Fraction: Fixed: Container node in collection box doesn't always go back to the center of the screen on reset all, see #3397 comment 15 item 2
 Build a Fraction: Fixed: Resample forgotten if main screen viewed, see #3397
 Build a Fraction: Numbers: Changed from 4 targets to 3 in level 5
 Build a Mixed Fraction: Numbers: Factored out "box" class
